<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_main_til_story_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activity_main_tie_story_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/story_name" />

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#eee"
                    android:divider="?android:dividerVertical"
                    android:showDividers="middle">

                    <Button
                        android:id="@+id/pick_button"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@android:drawable/ic_menu_gallery"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/button_pick"
                        android:maxLines="2"
                        android:onClick="pickFile"
                        android:padding="8dp"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/record_button"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|bottom"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_mic"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/button_record"
                        android:maxLines="2"
                        android:onClick="recordVideo"
                        android:padding="8dp"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColorHint="#c00"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/activity_main_ll_record"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/activity_main_iv_record_gif"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/recording_audio"
                        android:visibility="visible" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/activity_main_btn_record"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:drawableTop="@drawable/ic_mic"
                            android:text="@string/button_record"
                            android:visibility="visible" />

                        <Button
                            android:id="@+id/activity_main_btn_stop"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:drawableTop="@drawable/ic_stop"
                            android:enabled="false"
                            android:text="@string/stop"
                            android:visibility="visible" />
                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/activity_main_btn_upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:drawableTop="@android:drawable/ic_menu_upload"
                    android:enabled="false"
                    android:text="@string/upload"
                    android:visibility="gone" />


                <LinearLayout
                    android:id="@+id/activity_main_ll_player"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_200dp"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                        android:id="@+id/activity_main_exo_player"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/activity_main_btn_play"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@android:drawable/ic_media_play"
                        android:text="@string/play" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/activity_main_ll_uploading"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_100dp"
                    android:layout_margin="@dimen/size_10dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/activity_main_tv_upload_story_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:ellipsize="middle"
                            android:maxLines="2"
                            android:text="@string/story_name"
                            android:textColor="@color/colorPrimary" />

                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/activity_main_fab_play"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|center"
                            android:layout_margin="@dimen/size_5dp"
                            android:src="@android:drawable/ic_media_play"
                            android:visibility="visible" />

                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/activity_main_fab_pause"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|center"
                            android:layout_margin="@dimen/size_5dp"
                            android:src="@android:drawable/ic_media_pause"
                            android:visibility="gone" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="@dimen/size_100dp"
                        android:layout_height="@dimen/size_100dp"
                        android:layout_gravity="center|end"
                        android:src="@drawable/icon_quintype" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/activity_main_ll_image_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#eee"
                    android:divider="?android:dividerVertical"
                    android:showDividers="middle">

                    <Button
                        android:id="@+id/pick_image_button"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@android:drawable/ic_menu_gallery"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/button_pick_image"
                        android:maxLines="2"
                        android:padding="8dp"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/capture_image_button"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|bottom"
                        android:layout_weight="1"
                        android:drawableTop="@android:drawable/ic_menu_camera"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/button_capture_image"
                        android:maxLines="2"
                        android:padding="8dp"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColorHint="#c00"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/activity_main_iv_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_200dp"
                    android:src="@drawable/ic_launcher_background"
                    android:visibility="visible" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:visibility="visible">

                </android.support.v7.widget.RecyclerView>

                <Button
                    android:id="@+id/activity_main_iv_upload_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_image"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/size_20sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
